# eeg48-public

./: .gitignore  CITATION.cff  README.md  TREE.txt  pyproject.toml
.github/workflows/: ci.yml
archive_raw/: 48Θƒ│Σ╕╗Φª│Φ⌐òΣ╛í.ipynb  Untitled.ipynb  build_4p2_docx.py  make_moduleA_extras.py  make_raw_epoch_example.py  moduleB_export_top_features.py  moduleB_phaseB_EEG_only.py  moduleB_roi_loso.py  run_4p2_all.sh  Γæí48Θƒ│EEGσëìσçªτÉå.ipynb  Γæó48Θƒ│QC.ipynb  Γæúπâ₧πé╣πé┐πâ╝ index.ipynb
data/: README.md
docs/: ARCHITECTURE.md  FIGURE_INDEX.md  PORTFOLIO.md
notebooks/: 06_eeg_modeling__moduleB_phaseB_EEG_only.ipynb  06_eeg_modeling__Γæñ48Θƒ_EEG.ipynb  99_misc__48Θƒ_πü_τë_τÉåτÜäτë_σ_ΘçÅ.ipynb  99_misc__Untitled2.ipynb  99_misc__moduleC_prime_full_script.ipynb  99_misc__moduleD_ambiguous_sounds_and_individual_diff_FINAL.ipynb  99_misc__ΓæÑ_τ_σÉêΦºúµ_Éµ_ûσéÖ.ipynb  RENAMING_MAP.csv
notebooks/_original/: Untitled1.ipynb  moduleA_define_subjective_targets.ipynb
report/: privacy_scan.json
scripts/: demo_synth.sh  run_all.sh  run_module_a.sh  run_module_b.sh  run_module_c.sh  run_module_d.sh
src/eeg48/: cli.py  master_report.py  notebook.py  privacy.py  report.py  synth.py
src/eeg48/legacy/: ._moduleB_roi_loso.py  ._plot_moduleB_importance_decompose_abscoef_v4.py  __init__.py  make_real_erp_tfr_figs.py  moduleB_roi_loso_v2.py  moduleB_temporal_generalization_v2.py  moduleC_finalize.py  moduleD_ambiguous_individual_diff.py  plot_moduleB_importance_decompose_abscoef_v4.py  plot_moduleB_maps.py
tests/: test_cli_help.py  test_results_card.py
(+6 files in other folders)
